Update about text from brochure, switch to Helvetica Neue

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Native State</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap');
-
     * {
       margin: 0;
       padding: 0;
@@ -14,7 +12,7 @@
     }
 
     body {
-      font-family: 'Inter', -apple-system, sans-serif;
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
       background: #d4d4d4;
       color: #1a1a1a;
       line-height: 1.7;
@@ -265,10 +263,13 @@
     <section>
       <div class="section-label">About</div>
       <p>
-        A monthly program for California-based media artists &mdash; working with light, code, screens, data, sound &mdash; to show work that isn't finished yet. Prototypes, experiments, tests. The kind of work that usually stays in the studio.
+        Native State is a monthly media art program at Eastern Gallery in Downtown Los Angeles, presented in partnership with Artnight. Each first Thursday, the program features California-based artists and designers whose work engages with technology &mdash; shown not as finished pieces, but as research, iteration, and work in progress.
       </p>
       <p>
-        <span class="emphasis">The work doesn't have to be resolved. It has to be alive.</span>
+        The premise is simple: nothing is ever done. Our natural state &mdash; as people and as practitioners &mdash; is motion. Ideas evolve through contact with others. Work sharpens through dialogue, not isolation. Native State opens that process to the public, inviting conversation and feedback as part of the work itself, not after it.
+      </p>
+      <p>
+        <span class="emphasis">The name refers to an unaltered condition &mdash; a material before it's been processed, a signal before it's been compressed.</span>
       </p>
     </section>
 
