Add Artnight DTLA partnership to header

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
       <h1>Native State</h1>
       <div class="tagline">R&D in public.</div>
       <div class="location">Eastern Gallery &mdash; Los Angeles</div>
+      <div class="location">In partnership with Artnight DTLA</div>
     </header>
 
     <section>
