--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       padding: 0 24px;
     }
 
+    /* Logo */
+    .logo {
+      width: 120px;
+      margin-bottom: 32px;
+    }
+
     /* Header */
     header {
       padding: 120px 0 80px;
@@ -255,6 +261,7 @@
   <div class="container">
 
     <header>
+      <img src="images/logo.png" alt="Native State" class="logo">
       <h1>Native State</h1>
       <div class="tagline">R&D in public.</div>
       <div class="location">Eastern Gallery &mdash; Los Angeles</div>
